--- a/14_JavaScript_Miller_05_style.css
+++ b/14_JavaScript_Miller_05_style.css
@@ -98,7 +98,7 @@ select {
   padding: 20px;
   margin: 0;
   background: black;
-  background-image: url("nasa.jpg");
+  background-image: url("14_JavaScript_Miller_04_nasa.jpg");
   background-attachment: fixed;
   background-position: bottom center;
   background-size: cover;
